Repair mobile jumping

--- a/style.css
+++ b/style.css
@@ -6,18 +6,18 @@
 	outline:none;
 }
 html{
-	overflow-x:hidden;
 	scroll-behavior: smooth;
 }
 body{
-	/* usuwam bo powoduje, że po zamknięciu galerii podbija na samą górę strony. Usunięcie nie powoduje chyba żadnego defektu- pozostałość po stronie LagodiGarda- próba usunięcia jumping scrolla na mobile
-	height: calc(var(--vh, 1vh) * 100);
+	/*usuwam bo powoduje, że po zamknięciu galerii podbija na samą górę strony. Usunięcie nie powoduje chyba żadnego defektu- pozostałość po stronie LagodiGarda- próba usunięcia jumping scrolla na mobile
+	*/height: calc(var(--vh, 1vh) * 100);
 	min-height: -webkit-fill-available;
-	*/
+	
 	transition:1s;
 	position:relative;
 	font-family:'Roboto', sans-serif;
 	background-image: url(img/pattern/brickwall/brickwall.png); /* Background pattern from Toptal Subtle Patterns */
+	overflow-x:hidden;
 }
 a:link 
 {
@@ -61,7 +61,7 @@ a:focus
 }
 .navbar{
 	width:100%;
-	height:20vh;
+	height:21vh;
 	/*background-image:url(img/pattern/brickwall/brickwall.png);*/
 	background-color: transparent;
 	box-shadow: 0px 4px 5px -2px black;
@@ -77,7 +77,7 @@ a:focus
 .navbar-nav{
 	width:100vw;
 	display:flex;
-	margin-top:20vh;
+	margin-top:21vh;
 	margin-bottom:10vh;
 	justify-content: space-between;
 	align-items: center;
@@ -940,6 +940,9 @@ footer > a > p{
 /*MEDIA QUERIES*/
 @media all and (min-width:600px){
 /*InvestmentPreparation section*/
+.logo{
+	width:16vw;
+}
 .archback{
 	position:relative;
 	overflow: hidden;
@@ -967,7 +970,7 @@ footer > a > p{
 }
 @media all and (min-width:768px){
 .logo{
-	width:18vw;
+	width:14vw;
 }
 #navbar-example{
 	width:50vw;
@@ -1028,17 +1031,36 @@ a.btn.btn-primary{
 @media all and (min-width:1200px){
 .logo{
 	width:12vw;
+	position:absolute;
+	top:10vh;
+	left:50vw;
+	transform:translate(-50%, -50%);
+}
+.header{
+	width:30vw;
+	height:100vh;
+}
+.navbar{
+	width:20vw;
+	box-shadow:0px 4px 5px -2px transparent;
+	height:70vh;
 }
 .navbar-expand-xl .navbar-collapse .navbar-nav {
-	height:100%;
 	display:flex;
 	justify-content: center;
-	align-items: center;
+	align-items: flex-start;
+	margin-top:0;
+	margin-bottom: 0;
+	flex-direction:column;
 }
 .navbar-nav .nav-item .nav-link {
 	position:relative;
 	padding-left: 4px;
 	padding-right: 4px;
+	color:rgba(256,256,256,0.8);
+}
+.navbar-nav .nav-item .nav-link:hover {
+	color:rgba(256,256,256,1);
 }
 .nav-pills .nav-link.active{
 	background-color: transparent;
@@ -1060,22 +1082,30 @@ a.btn.btn-primary{
 #navbar-example.collapse{
 	position:absolute;
 	display:flex;
-	align-items: center;
+	align-items: flex-start;
 }
 #navbar-example{
 	display:flex;
-	width:80vw;
+	width:20vw;
 	background-color: transparent;
-	position:absolute;
-	top:0px !important;
-	right:0px;
 	margin-left: 0px;
+	margin-top:20px;
 	height:inherit;
 	border:0px solid black;
-	box-shadow: 0px 0px 0px 0px #222;
+	box-shadow: 4px 5px 5px -2px transparent;
 	justify-content: flex-end;
 	align-items: center;
 	transition:all 0s;
+}
+.rectangle{
+	width:30%;
+	height:150%;
+	background-color: rgba(256,256,256,0.9);
+	position:absolute;
+	top:50%;
+	left:50%;
+	transform:translate(-50%, -50%) rotate(45deg);
+	mix-blend-mode: difference;
 }
 .descriptionList{
 	display:flex;
